--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
+<!DOC TYPE html>
 <html>
-
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
@@ -9,3 +9,31 @@
 	<script src="main.js">
 	</script>
 </head>
+<body>
+
+  <div class="container">  
+    <div class="box blue"></div>
+    <div class="box pink"></div>
+    <div class="box blue"></div>
+    <div class="box pink"></div>
+    <div class="box blue"></div>
+    <div class="box pink"></div>
+    <div class="box blue"></div>
+    <div class="box pink"></div>
+    <div class="box blue"></div>
+    <div class="box pink"></div>
+    <div class="box blue"></div>
+    <div class="box pink"></div>
+    <div class="box blue"></div>
+    <div class="box pink"></div>
+    <div class="box blue"></div>
+    <div class="box pink"></div>
+    <div class="box blue"></div>
+    <div class="box pink"></div>
+    <div class="box blue"></div>
+    <div class="box pink"></div>
+  </div>
+  
+  </div>
+  </body>
+</html>
